2018-08-19  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GLIB] Add API to throw exceptions using printf formatted strings
        https://bugs.webkit.org/show_bug.cgi?id=188698

        Reviewed by Michael Catanzaro.

        Add jsc_context_throw_printf() and jsc_context_throw_with_name_printf(). Also add new public constructors of
        JSCException using printf formatted string.

        * API/glib/JSCContext.cpp:
        (jsc_context_throw_printf):
        (jsc_context_throw_with_name_printf):
        * API/glib/JSCContext.h:
        * API/glib/JSCException.cpp:
        (jsc_exception_new_printf):
        (jsc_exception_new_vprintf):
        (jsc_exception_new_with_name_printf):
        (jsc_exception_new_with_name_vprintf):
        * API/glib/JSCException.h:
        * API/glib/docs/jsc-glib-4.0-sections.txt:

2018-08-19  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GLIB] Complete the JSCException API
        https://bugs.webkit.org/show_bug.cgi?id=188695

        Reviewed by Michael Catanzaro.

        Add more API to JSCException:
         - New function to get the column number
         - New function get exception as string (toString())
         - Add the possibility to create exceptions with a custom error name.
         - New function to get the exception error name
         - New function to get the exception backtrace.
         - New convenience function to report a exception by returning a formatted string with all the exception
           details, to be shown as a user error message.

        * API/glib/JSCContext.cpp:
        (jsc_context_throw_with_name):
        * API/glib/JSCContext.h:
        * API/glib/JSCException.cpp:
        (jscExceptionEnsureProperties):
        (jsc_exception_new):
        (jsc_exception_new_with_name):
        (jsc_exception_get_name):
        (jsc_exception_get_column_number):
        (jsc_exception_get_back_trace_string):
        (jsc_exception_to_string):
        (jsc_exception_report):