@@ -1,3 +1,15 @@
+2018-08-20  Mark Lam  <mark.lam@apple.com>
+
+        Fix the LLInt so that btjs shows vmEntryToJavaScript instead of llintPCRangeStart for the entry frame.
+        https://bugs.webkit.org/show_bug.cgi?id=188769
+
+        Reviewed by Michael Saboff.
+
+        * llint/LowLevelInterpreter.asm:
+        - Just put an unused instruction between llintPCRangeStart and vmEntryToJavaScript
+          so that libunwind doesn't get confused by the 2 labels pointing to the same
+          code address.
+
 2018-08-19  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GLIB] Add API to throw exceptions using printf formatted strings
